syntax = "proto3";

option java_multiple_files = true;
package com.bilyoner.assignment.balance.api;

message BDecimal {
    uint32 scale = 1;
    uint32 precision = 2;
    bytes value = 3;
}

message BalanceUpdateRequest {
    enum TransactionType {
        BLOCKED = 0;
        UPDATED = 1;
    }
    int64 userId = 1;
    BDecimal amount = 2;
    string transactionId = 3;
    TransactionType transactionType = 4;
}

message BalanceUpdateResponse {
    enum BalanceUpdateResult {
        SUCCESSFUL = 0;
        FAIL = 1;
    }
    BalanceUpdateResult result = 1;
}

message BalanceRequest {
    int64 userId = 1;
}

message BalanceResponse {
    int64 userId = 1;
    BDecimal amount = 2;
}

service BalanceService {
    rpc updateUserBalance (BalanceUpdateRequest) returns (BalanceUpdateResponse);
    rpc getUserBalance (BalanceRequest) returns (BalanceResponse);
}
